syntax = "proto3";
package meshmind.events;
import "common.proto";

enum EventType {
  EVENT_TYPE_UNSPECIFIED = 0;
  CASE_CREATED = 10;
  CASE_CONFIRMED = 11;
  CASE_TAGGED = 12;
  ARTIFACT_PUBLISHED = 20;
  ARTIFACT_DEPRECATED = 21;
  WEB_BRIEF_CREATED = 30;
  WEB_BRIEF_EXPIRED = 31;
  PEER_SEEN = 40;
  PEER_TRUST_UPDATED = 41;
  POLICY_UPDATED = 42;
  TRAIN_JOB_STARTED = 50;
  TRAIN_JOB_COMPLETED = 51;
  MODEL_PROMOTED = 52;
  MODEL_ROLLED_BACK = 53;
  TOOL_INVOCATION_RECORDED = 60;
  DATA_SHARED_RECORDED = 61;
}

enum ArtifactType {
  ARTIFACT_TYPE_UNSPECIFIED = 0;
  RUNBOOK = 1;
  TEMPLATE = 2;
  RECIPE = 3;
  WEB_BRIEF = 4;
  MODEL_BUNDLE = 5;
}

message EventEnvelope {
  string event_id = 1;
  EventType type = 2;
  meshmind.common.Timestamp ts = 3;
  meshmind.common.NodeId node_id = 4;
  meshmind.common.TenantId tenant_id = 5;
  meshmind.common.Sensitivity sensitivity = 6;

  meshmind.common.HashRef prev_hash = 7;
  meshmind.common.HashRef event_hash = 8;
  bytes signature = 9;

  repeated meshmind.common.HashRef refs = 10;

  oneof payload {
    CaseCreated case_created = 100;
    CaseConfirmed case_confirmed = 101;
    CaseTagged case_tagged = 102;

    ArtifactPublished artifact_published = 110;
    ArtifactDeprecated artifact_deprecated = 111;

    WebBriefCreated web_brief_created = 120;
    WebBriefExpired web_brief_expired = 121;

    PeerSeen peer_seen = 130;
    PeerTrustUpdated peer_trust_updated = 131;
    PolicyUpdated policy_updated = 132;

    TrainJobStarted train_job_started = 140;
    TrainJobCompleted train_job_completed = 141;
    ModelPromoted model_promoted = 142;
    ModelRolledBack model_rolled_back = 143;

    ToolInvocationRecorded tool_invocation_recorded = 150;
    DataSharedRecorded data_shared_recorded = 151;
  }

  repeated string tags = 200;
}

message CaseCreated {
  string case_id = 1;
  string title = 2;
  string summary = 3;
  meshmind.common.HashRef content_ref = 4;
  bool shareable = 5;
}
message CaseConfirmed { string case_id = 1; string outcome = 2; float confidence = 3; }
message CaseTagged { string case_id = 1; repeated string add_tags = 2; repeated string remove_tags = 3; }

message ArtifactPublished {
  string artifact_id = 1;
  ArtifactType artifact_type = 2;
  uint32 version = 3;
  string title = 4;
  meshmind.common.HashRef content_ref = 5;
  bool shareable = 6;
  int64 expires_unix_ms = 7;
}
message ArtifactDeprecated { string artifact_id = 1; uint32 version = 2; string reason = 3; }

message WebSource {
  string url = 1;
  meshmind.common.Timestamp retrieved_at = 2;
  string publisher = 3;
  string snippet = 4;
}
message WebBriefCreated {
  string artifact_id = 1;
  string question = 2;
  string summary = 3;
  repeated WebSource sources = 4;
  float confidence = 5;
  int64 expires_unix_ms = 6;
}
message WebBriefExpired { string artifact_id = 1; uint32 version = 2; }

message PeerSeen { meshmind.common.NodeId peer_node_id = 1; uint32 rtt_ms = 2; repeated string capabilities = 3; }
message PeerTrustUpdated { meshmind.common.NodeId peer_node_id = 1; float trust_score = 2; string reason = 3; }
message PolicyUpdated { string policy_id = 1; uint32 version = 2; meshmind.common.HashRef policy_ref = 3; }

message TrainJobStarted {
  string job_id = 1;
  string target = 2;
  meshmind.common.HashRef dataset_manifest_ref = 3;
  uint32 max_steps = 4;
  uint32 max_minutes = 5;
}
message TrainMetric { string name = 1; double value = 2; }
message TrainJobCompleted {
  string job_id = 1;
  bool success = 2;
  string notes = 3;
  repeated TrainMetric metrics = 4;
  meshmind.common.HashRef model_bundle_ref = 5;
}
message ModelPromoted { string model_id = 1; uint32 version = 2; meshmind.common.HashRef model_bundle_ref = 3; }
message ModelRolledBack { string model_id = 1; uint32 from_version = 2; uint32 to_version = 3; string reason = 4; }

message ToolInvocationRecorded {
  string invocation_id = 1;
  string tool_name = 2;
  string summary = 3;
  bool success = 4;
  uint32 duration_ms = 5;
  meshmind.common.HashRef output_ref = 6;
}

enum ShareChannel { SHARE_CHANNEL_UNSPECIFIED = 0; PEER = 1; WEB = 2; LOCAL_EXPORT = 3; }

message DataSharedRecorded {
  string share_id = 1;
  ShareChannel channel = 2;
  meshmind.common.NodeId peer_node_id = 3;
  string destination = 4;
  string redaction_summary = 5;
  bool allowed = 6;
  string policy_reason = 7;
}
